<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="SPEED CALCULATOR"
        android:textColor="#FBFBFB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <EditText
        android:id="@+id/ET_distance"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="#939191"
        android:ems="10"
        android:hint="@string/enter_distance_meter"
        android:inputType="number|textPersonName"
        android:textColorHint="#6C6A6A"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ET_second"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="#939191"
        android:ems="10"
        android:hint="@string/enter_time_second"
        android:inputType="number|textPersonName"
        android:textColorHint="#6C6A6A"
        app:layout_constraintEnd_toEndOf="@+id/ET_distance"
        app:layout_constraintStart_toStartOf="@+id/ET_distance"
        app:layout_constraintTop_toBottomOf="@+id/ET_distance" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/button_cal"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_second" />

    <Button
        android:id="@+id/button_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toTopOf="@+id/button_clear" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/average_speed_km_h"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button_cal"
        app:layout_constraintStart_toStartOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/button_cal" />

    <TextView
        android:id="@+id/text_ans"
        android:layout_width="220dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>